fix get polygon